syntax = "proto3";

package cosmos.budget.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/tendermint/budget/x/budget/types";

// Params defines the set of params for the budget module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  // The universal epoch length in number of blocks, Every process for budget collecting is executed with this
  // epoch_blocks frequency
  uint32 epoch_blocks = 1 [(gogoproto.moretags) = "yaml:\"epoch_blocks\""];

  // Budgets parameter can be added, deleted, and modified through gov.ParameterChangeProposal, and for each purpose,
  // the changes in the existing budget list should be applied and set.
  repeated Budget budgets = 2 [(gogoproto.moretags) = "yaml:\"budgets\"", (gogoproto.nullable) = false];
}

// Budget defines the budget struct.
message Budget {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  // name defines the name of the budget
  string name = 1 [(gogoproto.moretags) = "yaml:\"name\""];

  // rate specifies the distributing amount by ratio of total budget source
  string rate = 2 [
    (gogoproto.moretags)   = "yaml:\"rate\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];

  // budget_source_address defines the bech32-encoded address that source of the budget
  string budget_source_address = 3 [(gogoproto.moretags) = "yaml:\"budget_source_address\""];

  // collection_address defines the bech32-encoded address of the budget pool to distribute
  string collection_address = 4 [(gogoproto.moretags) = "yaml:\"collection_address\""];

  // start_time specifies the start time of the budget
  google.protobuf.Timestamp start_time = 5
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start_time\""];

  // end_time specifies the end time of the budget
  google.protobuf.Timestamp end_time = 6
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"end_time\""];
}

message TotalCollectedCoins {
  option (gogoproto.goproto_getters) = false;

  repeated cosmos.base.v1beta1.Coin total_collected_coins = 1 [
    (gogoproto.moretags)     = "yaml:\"total_collected_coins\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];
}
